fix: stabilize configuration transport and provider lifecycle in v1.3.3
Fix partial GPS/network setup, cleanup, live toggles and start/stop races.
Use versioned private preferences and atomic root snapshots with independent
fallback, bounded root execution and active-driver leases. Migrate existing
NSP settings/favorites without depending on deprecated shared-prefs metadata.

Preserve system caches by rewriting per recipient, honor exemptions and
separate hook liveness from configuration/delivery diagnostics. Add a diagnostic
export and document upgrade reboots, limitations and the prerelease status.

Validation: 78 host regression assertions; Android SDK compilation and DEX;
APK alignment and v2/v3 signatures verified; signing certificate matches 1.3.2.
No physical Android/WeChat/DingTalk device validation was available.

Co-authored-by: Codex <codex@openai.com>